main.tf
provider "aws" {
  region = var.aws_region
}

resource "aws_instance" "grafana" {
  ami                         = var.ami_id
  instance_type               = var.instance_type
  key_name                    = var.key_name
  vpc_security_group_ids      = [aws_security_group.grafana_sg.id]
  subnet_id                   = var.subnet_id
  associate_public_ip_address = true

  tags = {
    Name = "grafana-server"
  }
}

resource "aws_security_group" "grafana_sg" {
  name        = "grafana-sg"
  description = "Allow Grafana, SSH"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9090
    to_port     = 9090
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9100
    to_port     = 9100
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9093
    to_port     = 9093
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "grafana-sg"
  }
}

resource "aws_ebs_volume" "prometheus_data" {
  availability_zone = aws_instance.grafana.availability_zone
  size              = 20
  type              = "gp3"

  tags = {
    Name = "prometheus-data"
  }
}

resource "aws_volume_attachment" "prometheus_ebs" {
  device_name  = "/dev/xvdf"
  volume_id    = aws_ebs_volume.prometheus_data.id
  instance_id  = aws_instance.grafana.id
  force_detach = true
}
